# xyCMake

./: .gitignore
sample/: CMakeLists.txt  SampleConfig.h.in
sample/include/utils/: power.hpp
sample/src/: main.cpp
sample/src/utils/: CMakeLists.txt  power.cpp
